tests/error/prim_parent.gw
// [contains] cannot extend primitive
 class C extends int {}
